--- a/.github/workflows/download.yml
+++ b/.github/workflows/download.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install asyncio aiohttp zlib google.protobuf re
+          pip install asyncio aiohttp google.protobuf re
 
       - name: Run download.py
         env:
