--- a/.github/workflows/download.yml
+++ b/.github/workflows/download.yml
@@ -39,7 +39,7 @@ jobs:
           git pull
           git add .
           git commit -m "Updated versions as of $(date -u +'%Y-%m-%d %H:%M:%S UTC')"
-          git push origin prod
+          git push origin main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
